[package]
name = "node-bindget-example"
version = "0.1.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.node-bindgen]
version = "2.1.1"
features = []

[build_dependencies.node-bindgen]
version = "2.1.1"
features = ["build"]
